--- a/backend/api/Dockerfile
+++ b/backend/api/Dockerfile
@@ -1,5 +1,8 @@
-FROM eclipse-temurin:17-jdk-alpine
+FROM eclipse-temurin:21-jre-alpine
 WORKDIR /app
-COPY target/app.jar app.jar
+
+ENV JAVA_TOOL_OPTIONS="-XX:+ExitOnOutOfMemoryError -XX:MaxRAMPercentage=75"
+
+COPY target/app.jar ./app.jar
 EXPOSE 8080
 ENTRYPOINT ["java","-jar","/app/app.jar"]
