--- a/frontend/client/Dockerfile
+++ b/frontend/client/Dockerfile
@@ -1,5 +1,14 @@
 FROM node:18-alpine AS build
 WORKDIR /app
+
+ARG VITE_API_BASE
+ARG VITE_LIVEKIT_WS_URL
+ARG VITE_REFRESH_HEADER
+
+ENV VITE_API_BASE=$VITE_API_BASE
+ENV VITE_LIVEKIT_WS_URL=$VITE_LIVEKIT_WS_URL
+ENV VITE_REFRESH_HEADER=$VITE_REFRESH_HEADER
+
 COPY package*.json ./
 RUN npm ci
 COPY . .
