--- a/agents/package.json
+++ b/agents/package.json
@@ -20,7 +20,11 @@
   },
   "dependencies": {
     "@livekit/agents": "~1.0.11",
+    "@livekit/agents-plugin-assemblyai": "^0.0.0",
+    "@livekit/agents-plugin-cartesia": "^1.0.17",
+    "@livekit/agents-plugin-deepgram": "^1.0.17",
     "@livekit/agents-plugin-livekit": "~1.0.11",
+    "@livekit/agents-plugin-openai": "^1.0.17",
     "@livekit/agents-plugin-silero": "~1.0.11",
     "@livekit/noise-cancellation-node": "~0.1.9",
     "dotenv": "^17.2.3",
