Configure YandexGPT support;

--- a/agents/.env.example
+++ b/agents/.env.example
@@ -2,13 +2,17 @@ LIVEKIT_URL=wss://live.example.com
 LIVEKIT_API_KEY=yourkey
 LIVEKIT_API_SECRET=yoursecret
 
-STT_PROVIDER=assemblyai/universal-streaming:en
-LLM_PROVIDER=openai/gpt-4.1-mini
-TTS_PROVIDER=cartesia/sonic-2:6ccbfb76-1fc6-48f7-b71d-91ac6298247b
+STT_PROVIDER=null
+LLM_PROVIDER=yandex
+TTS_PROVIDER=null
 
-ASSEMBLYAI_API_KEY=yourkey
+DEEPGRAM_API_KEY=yourkey
 OPENAI_API_KEY=yourkey
 CARTESIA_API_KEY=yourkey
+
+YANDEX_CLOUD_FOLDER=yourfolder
+YANDEX_CLOUD_API_KEY=yourkey
+YANDEX_CLOUD_MODEL=yandexgpt/latest
 
 
 
