--- a/agents/package.json
+++ b/agents/package.json
@@ -28,6 +28,12 @@
     "@livekit/agents-plugin-silero": "~1.0.11",
     "@livekit/noise-cancellation-node": "~0.1.9",
     "dotenv": "^17.2.3",
+    "openai": "^4.104.0",
     "undici": "^7.16.0"
+  },
+  "pnpm": {
+    "overrides": {
+      "openai": "4.104.0"
+    }
   }
 }
