--- a/agents/package.json
+++ b/agents/package.json
@@ -27,6 +27,7 @@
     "@livekit/agents-plugin-openai": "^1.0.17",
     "@livekit/agents-plugin-silero": "~1.0.11",
     "@livekit/noise-cancellation-node": "~0.1.9",
+    "@livekit/rtc-node": "^0.13.20",
     "dotenv": "^17.2.3",
     "openai": "^4.104.0",
     "undici": "^7.16.0"
