Improve agent handling;

--- a/agents/package.json
+++ b/agents/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx src/agent.ts dev",
+    "dev": "tsx src/agent.ts dev --log-level=debug",
     "start": "tsx src/agent.ts start",
     "download-files": "tsx src/agent.ts download-files",
     "build": "tsc"
