Add Yandex SpeechKit STT implementation;

--- a/agents/.env.example
+++ b/agents/.env.example
@@ -2,7 +2,7 @@ LIVEKIT_URL=wss://live.example.com
 LIVEKIT_API_KEY=yourkey
 LIVEKIT_API_SECRET=yoursecret
 
-STT_PROVIDER=null
+STT_PROVIDER=yandex
 LLM_PROVIDER=yandex
 TTS_PROVIDER=null
 
