--- a/backend/api/pom.xml
+++ b/backend/api/pom.xml
@@ -82,6 +82,11 @@
             <artifactId>livekit-server</artifactId>
             <version>0.10.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.bucket4j</groupId>
+            <artifactId>bucket4j-core</artifactId>
+            <version>8.10.1</version>
+        </dependency>
 
         <!-- Test -->
         <dependency>
