--- a/deploy/.env.example
+++ b/deploy/.env.example
@@ -17,6 +17,9 @@ JWT_SECRET=myJwtSecret
 JWT_ACCESS_EXPIRATION=PT30M
 JWT_REFRESH_EXPIRATION=PT12H
 
+INIT_BOOTSTRAP_SERVICE_KEY=test_service_key
+
+
 LIVEKIT_API_KEY=abcdef
 LIVEKIT_API_SECRET=123456
 
