--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -132,11 +132,36 @@ services:
       - update
     restart: "no"
 
+  ots:
+    image: onetimesecret/onetimesecret:latest
+    env_file:
+      - .env
+    environment:
+      - RACK_ENV=production
+      - HOST=pass.confa.space
+      - SSL=true
+      - SECRET=${OTS_SECRET}
+      - REDIS_URL=redis://:${REDIS_PASSWORD}@ots-redis:6379/0
+      - AUTH_SIGNUP=false
+    depends_on:
+      - ots-redis
+    networks: [shared_web]
+    restart: unless-stopped
+
+  ots-redis:
+    image: redis:bookworm
+    command: [ "redis-server", "--requirepass", "${REDIS_PASSWORD}" ]
+    volumes:
+      - ots_redis_data:/data
+    networks: [shared_web]
+    restart: unless-stopped
+
 volumes:
   caddy_data:
   caddy_config:
   mysql_data:
   redis_data:
+  ots_redis_data:
 
 # Before start docker-compose create network:
 # docker network ls
