--- a/backend/api/pom.xml
+++ b/backend/api/pom.xml
@@ -91,6 +91,11 @@
             <artifactId>bucket4j-core</artifactId>
             <version>8.10.1</version>
         </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>s3</artifactId>
+            <version>2.31.59</version>
+        </dependency>
 
         <!-- Test -->
         <dependency>
