--- a/backend/api/src/main/resources/application.yml
+++ b/backend/api/src/main/resources/application.yml
@@ -50,7 +50,7 @@ avatar:
   storage:
     endpoint: ${AVATAR_S3_ENDPOINT:http://localhost:9000}
     region: ${AVATAR_S3_REGION:eu}
-    bucket: ${AVATAR_S3_BUCKET:confa-avatars}
+    bucket: ${AVATAR_S3_BUCKET:confa-assets}
     access-key: ${AVATAR_S3_ACCESS_KEY:minioadmin}
     secret-key: ${AVATAR_S3_SECRET_KEY:minioadmin}
     path-style: ${AVATAR_S3_PATH_STYLE:true}
