--- a/deploy/.env.example
+++ b/deploy/.env.example
@@ -23,3 +23,8 @@ INIT_BOOTSTRAP_SERVICE_KEY=test_service_key
 LIVEKIT_API_KEY=abcdef
 LIVEKIT_API_SECRET=123456
 
+AVATAR_S3_ENDPOINT=http://minio:9000
+AVATAR_S3_ACCESS_KEY=minioadmin
+AVATAR_S3_SECRET_KEY=minioadmin
+AVATAR_S3_PATH_STYLE=true
+
